--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <div id="map"></div>
+    <script src="demo/datgui.js"></script>
     <script src="dist/demo.js"></script>
 </body>
 </html>
